--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.13.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
+    "sort-by": "^0.0.2",
     "three": "^0.154.0"
   },
   "devDependencies": {
