--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "three": "^0.154.0"
   },
   "devDependencies": {
+    "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/three": "^0.152.1",
